--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,8 +6,25 @@
     transition: width 0.3s;
 }
 
-.collapsed {
-    width: var(--sidebar-width-collapsed);
+.items {
+    margin-top: 20px;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+
+    .item {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+
+        .icon {
+            fill: var(--primary-color);
+        }
+
+        .link {
+            margin-left: 10px;
+        }
+    }
 }
 
 .switchers {
@@ -20,6 +37,19 @@
 
 .lang {
     margin-left: 20px;
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .lang {
+        margin-left: 0;
+    }
 }
 
 .collapsedBtn {
