--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,59 +1,65 @@
 .Sidebar {
-    height: calc(100vh - var(--navbar-height));
-    width: var(--sidebar-width);
-    background: var(--inverted-bg-color);
-    position: relative;
-    transition: width 0.3s;
+  height: calc(100vh - var(--navbar-height));
+  width: var(--sidebar-width);
+  background: var(--inverted-bg-color);
+  position: relative;
+  transition: width 0.3s;
 }
 
 .items {
-    margin-top: 20px;
-    margin-left: 30px;
+  margin-top: 20px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+
+  .item {
+    margin-top: 10px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
 
-    .item {
-        margin-top: 10px;
-        display: flex;
-        align-items: center;
-
-        .icon {
-            fill: var(--primary-color);
-        }
-
-        .link {
-            margin-left: 10px;
-        }
+    .icon {
+      fill: var(--inverted-primary-color);
     }
+
+    .link {
+      margin-left: 10px;
+    }
+  }
 }
 
 .switchers {
-    position: absolute;
-    bottom: 20px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  position: absolute;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .lang {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .collapsed {
-    width: var(--sidebar-width-collapsed);
+  width: var(--sidebar-width-collapsed);
 
-    .switchers {
-        flex-direction: column;
-        align-items: center;
-    }
+  .link {
+    opacity: 0;
+    transition: 0.2s opacity;
+    width: 0;
+  }
 
-    .lang {
-        margin-left: 0;
-    }
+  .switchers {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lang {
+    margin-left: 0;
+  }
 }
 
 .collapsedBtn {
-    position: absolute;
-    right: -32px;
-    bottom: 32px;
+  position: absolute;
+  right: -32px;
+  bottom: 32px;
 }
