--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,27 +6,6 @@
   transition: width 0.3s;
 }
 
-.items {
-  margin-top: 20px;
-  margin-left: 30px;
-  display: flex;
-  flex-direction: column;
-
-  .item {
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-
-    .icon {
-      fill: var(--inverted-primary-color);
-    }
-
-    .link {
-      margin-left: 10px;
-    }
-  }
-}
-
 .switchers {
   position: absolute;
   bottom: 20px;
@@ -39,14 +18,36 @@
   margin-left: 20px;
 }
 
+.collapseBtn {
+  position: absolute;
+  right: -32px;
+  bottom: 32px;
+}
+
+.items {
+  margin-top: 20px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.link {
+  margin-left: 10px;
+  opacity: 1;
+}
+
+.icon {
+  fill: var(--inverted-primary-color);
+}
+
 .collapsed {
   width: var(--sidebar-width-collapsed);
-
-  .link {
-    opacity: 0;
-    transition: 0.2s opacity;
-    width: 0;
-  }
 
   .switchers {
     flex-direction: column;
@@ -56,10 +57,10 @@
   .lang {
     margin-left: 0;
   }
-}
 
-.collapsedBtn {
-  position: absolute;
-  right: -32px;
-  bottom: 32px;
+  .link {
+    opacity: 0;
+    transition: 0.2s opacity;
+    width: 0;
+  }
 }
