--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -7,6 +7,12 @@
   z-index: -1;
   opacity: 0;
   pointer-events: none;
+  color: var(--primary-color);
+}
+
+.Modal.dark {
+  //--bg-color: rgb(32 32 32);
+  //--primary-color: rgb(0 182 210);
 }
 
 .overlay {
