--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -4,7 +4,8 @@
   color: var(--primary-color);
 }
 
-.clear, .clearInverted {
+.clear,
+.clearInverted {
   padding: 0;
   border: none;
   background: none;
