--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,27 +1,27 @@
 .Modal {
   position: fixed;
+  z-index: -1;
   top: 0;
+  right: 0;
   bottom: 0;
   left: 0;
-  right: 0;
-  z-index: -1;
   opacity: 0;
   pointer-events: none;
   color: var(--primary-color);
 }
 
 .Modal.dark {
-  //--bg-color: rgb(32 32 32);
-  //--primary-color: rgb(0 182 210);
+  --bg-color: rgb(32 32 32);
+  --primary-color: rgb(0 182 210);
 }
 
 .overlay {
+  display: flex;
   width: 100%;
   height: 100%;
-  display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--overlay-color)
+  background: var(--overlay-color);
 }
 
 .content {
