--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,4 +1,4 @@
-.app.dark {
+.app_dark_theme {
   --bg-color: rgb(32 32 32);
   --inverted-bg-color: rgb(222 222 222);
   --primary-color: rgb(0 182 210);
