--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,4 +1,4 @@
-.app.light {
+.app_light_theme {
   --bg-color: rgb(222 222 222);
   --inverted-bg-color: rgb(32 32 32);
   --primary-color: rgb(158 6 77);
