--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,8 +3,7 @@
 @import "themes/light";
 @import "themes/dark";
 
-.app,
-.app.modal {
+body {
   font: var(--font-m);
   color: var(--primary-color);
 }
